# streamlumo-obs-plugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: shared_buffer.h
src/: frame_writer.cpp  frame_writer.h  plugin_main.cpp  shm_posix.cpp  shm_posix.h  shm_win32.cpp  shm_win32.h
